fasta -> GBK for Genome import change file type label in Genome import help line from fasta to GBK

--- a/src/plugin/iframe_root/app/selector.view/selector.view.html
+++ b/src/plugin/iframe_root/app/selector.view/selector.view.html
@@ -15,7 +15,7 @@
 
 
     <div class="help-text" *ngIf="selectedType.name == 'Genomes'" >
-        Next, select fasta files from below to import.
+        Next, select GBK files from below to import.
     </div>
 
     <div class="help-text" *ngIf="selectedType.name == 'Single-end Reads'" >
