Minor text fixes
narrative -> Narrative
meta data -> metadata

--- a/src/plugin/iframe_root/app/edit-meta.view/edit-meta.view.html
+++ b/src/plugin/iframe_root/app/edit-meta.view/edit-meta.view.html
@@ -1,7 +1,7 @@
 <div class="top-bar clearfix">
 
     <div class="help-text pull-left">
-        Select a narrative, edit the associated meta data, and import.
+        Select a Narrative, edit the associated metadata, and import.
     </div>
 
     <div class="pull-right">
